Fix the border country alignment

--- a/detail.css
+++ b/detail.css
@@ -20,14 +20,24 @@ body.dark {
   transition: 0.2s;
 }
 
+.details-text-container {
+  margin-right: 10px;
+}
+
 .Border-area {
   margin-top: 15px;
   display: flex;
-  flex-direction: row;
-  align-items: center;
+  flex-wrap: wrap;
 }
 .fa-moon {
   margin-right: 4px;
+}
+
+.border-header {
+  display: inline-block;
+  width: 200px; /* Adjust the width value as needed */
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 
 .Header {
@@ -57,7 +67,6 @@ body.dark {
   margin-inline: auto;
   margin-left: 40px;
   margin-right: 40px;
- 
 }
 
 .theme-changer {
@@ -101,7 +110,7 @@ body.dark {
 .details-text {
   display: flex;
   flex-direction: column;
-  column-gap: 50px;
+  column-gap: 30px;
   max-height: 180px;
   flex-wrap: wrap;
   margin-top: 10px;
@@ -118,8 +127,8 @@ body.dark {
 
 .border-countries {
   margin-top: 5px;
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
   gap: 15px;
 }
 
@@ -144,14 +153,17 @@ body.dark {
 }
 .left-side {
   margin-bottom: 80px;
+  display: flex;
+  flex-direction: column;
 }
 .left-side p {
   margin-top: 10px;
+  display: flex;
 }
 .right-side p {
   margin-top: 10px;
+  margin-right: 10px;
 }
-
 
 .loader {
   border: 4px solid #f3f3f3; /* Light gray border */
@@ -164,8 +176,12 @@ body.dark {
 }
 
 @keyframes spin {
-  0% { transform: rotate(0deg); } /* Start the animation at 0 degrees */
-  100% { transform: rotate(360deg); } /* End the animation at 360 degrees (a full circle) */
+  0% {
+    transform: rotate(0deg);
+  } /* Start the animation at 0 degrees */
+  100% {
+    transform: rotate(360deg);
+  } /* End the animation at 360 degrees (a full circle) */
 }
 
 @media (max-width: 1200px) {
@@ -176,17 +192,18 @@ body.dark {
   .details-text {
     column-gap: 0px;
   }
+  .border-countries {
+    grid-template-columns: repeat(3, 1fr);
+  }
 }
 
-@media (max-width: 1160px) {
+@media (max-width: 1100px) {
   .country-details {
     gap: 50px;
     margin-left: 66px;
+    flex-direction: column;
   }
-  .details-text {
-    column-gap: 0px;
-  }
-    
+
   .Border-area {
     width: 400px;
   }
@@ -206,21 +223,20 @@ body.dark {
 }
 
 @media (max-width: 950px) {
-
   .country-details {
     flex-direction: column;
     align-items: flex-start;
     margin-top: 50px;
     margin-left: 50px;
     gap: 16px;
-   }
-   .Border-area{
+  }
+  .Border-area {
     width: 500px;
-   }
+  }
   .country-details img {
     width: 550px;
     height: 400px;
-}
+  }
   .h1 {
     font-size: 1.5rem;
     margin-top: 50px;
@@ -239,10 +255,10 @@ body.dark {
     margin-top: 50px;
     margin-left: 50px;
     gap: 16px;
-   }
-   .Border-area{
+  }
+  .Border-area {
     width: 500px;
-   }
+  }
 }
 
 @media (max-width: 890px) {
@@ -259,7 +275,8 @@ body.dark {
   }
   .border-header {
     font-size: 14px;
-    margin-bottom: 15px
+    margin-bottom: 15px;
+    width: 100%;
   }
 }
 
@@ -312,6 +329,8 @@ body.dark {
   }
   .right-side {
     margin-bottom: 1rem;
+    display: flex;
+    flex-direction: column;
   }
   .left-side > p {
     margin-bottom: 2px;
@@ -334,7 +353,7 @@ body.dark {
 }
 @media (max-width: 440px) {
   .country-details img {
-    width: 350px;
+    width: 330px;
     height: 250px;
   }
   .country-details-container {
